[package]
name = "ble_explorer"
version = "0.1.0"
edition = "2021"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blurz = "0.4.0"
regex = "1"
lazy_static = "1.4.0"
env_logger = "0.9"
log = "0.4"
serde_json = "1.0.73"
sixtyfps = "0.1.5"

[build-dependencies]
sixtyfps-build = "0.1.5"